# Ros2_Slam

./: .gitignore  AGENTS.md  README.md  SYSTEM_OVERVIEW.md
.learnings/: ERRORS.md  LEARNINGS.md
docs/: 00-项目范围.md  00_project_scope.md  01-快速开始.md  02-系统架构.md  02_hardware_connection.md  03-硬件接线与设备识别.md  03_lidar_mapping.md  04-串口桥接协议.md  04-建图指南.md  05-导航拆解调试.md  05-导航指南.md  05-建图测试流程.md  05b-导航拆解调试.md  06-底盘与串口桥接.md  07-运维与排障.md  08-开发与二次复用.md  09-迁移与兼容说明.md  10-树莓派4B雷达迁移问题清单.md  99_troubleshooting.md  README.md  host-mcu-integration-status.md
launch_scripts/: README.md  base_cmd_test_node.py  check_chassis.sh  check_lidar.sh  check_lidar_health.sh  check_localization_chain.sh  check_mapping_pipeline.sh  check_navigation_pipeline.sh  check_system.sh  check_tf.sh  detect_base_port.sh  detect_lidar_port.sh  keyboard_control.sh  monitor_mapping_metrics.py  pad_nav_map.py  record_mapping_test.sh  robot.sh  save_map.sh  start_camera.sh  (+12 more)
src/YDLidar-SDK/: package.xml
src/YDLidar-SDK/.git.inner.bak/: config  index  packed-refs
src/YDLidar-SDK/.git.inner.bak/logs/refs/heads/: master
src/YDLidar-SDK/.git.inner.bak/objects/pack/: pack-96359bf09925b09bff03063a4a53f122bcda6c0e.idx
src/YDLidar-SDK/.git.inner.bak/refs/heads/: master
src/YDLidar-SDK/core/serial/impl/unix/: lock.h
src/YDLidar-SDK/doc/: YDLidar-SDK-Communication-Protocol.html
src/robot_bringup/: CMakeLists.txt  README.md  package.xml
src/robot_bringup/behavior_trees/: mapping_navigate_to_pose.xml  navigate_to_pose_recovery.xml
src/robot_bringup/config/: ekf_base.yaml  nav2_mapping_params.yaml  nav2_params_fallback.yaml  nav2_params_robot.yaml  raspberrypi.yaml  robot_common.yaml  slam_toolbox_mapping.yaml  slam_toolbox_mapping_fast.yaml  slam_toolbox_mapping_lidar_precision.yaml  slam_toolbox_mapping_realtime.yaml  ydlidar_X2_mapping.yaml  ydlidar_x2.yaml
src/robot_bringup/config/camera_info/: rgb_Astra_Orbbec.yaml
src/robot_bringup/launch/: base.launch.py  base_ekf.launch.py  camera_scan.launch.py  localization.launch.py  nav2.launch.py  sensors.launch.py  slam.launch.py  system.launch.py  visual_odom.launch.py  viz.launch.py
src/robot_bringup/rviz/: lidar_mapping.rviz  system.rviz
src/robot_bringup/scripts/: auto_mapping_driver.py  fake_base_odom.py  frontier_explorer.py  map_to_pointcloud_viz.py  scan_normalizer.py
src/stm32_robot_bridge/: CMakeLists.txt  README.md  package.xml
src/stm32_robot_bridge/launch/: stm32_bridge.launch.py
src/stm32_robot_bridge/stm32_robot_bridge/: bridge_node.py
(+131 files in other folders)
