<?xml version="1.0"?>
<package format="3">
  <name>stm32_robot_bridge</name>
  <version>0.0.1</version>
  <description>ROS2 bridge for YQuark STM32_Robot serial protocol</description>
  <maintainer email="robot@example.com">robot</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>python3-serial</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
